# treeceratops

./: CMakeLists.txt
include/treeceratops/: tree.hpp
test/: CMakeLists.txt  test.cpp
